// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|Scrollable basic 1`] = `
<div
  data-css-j67xs2=""
>
  <div
    data-css-16jsjct=""
    data-css-axmbrd=""
    data-scrollable={true}
  >
    <div
      data-css-1srorb2=""
    >
      <div
        data-css-3e2h8g=""
        onScroll={[Function]}
      >
        <div
          data-css-83b6zj=""
        />
      </div>
    </div>
    <div
      data-css-1ackutz=""
      data-css-ejkno9=""
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    />
  </div>
  <div
    data-css-1tfmk30=""
  >
    <div
      data-css-83b6zj=""
    />
  </div>
</div>
`;

exports[`Storyshots components|Scrollable dynamic sizing 1`] = `
<div
  data-css-j67xs2=""
>
  <div
    data-css-16jsjct=""
    data-css-18kkulc=""
    data-css-axmbrd=""
    data-scrollable={true}
  >
    <div
      data-css-1srorb2=""
    >
      <div
        data-css-3e2h8g=""
        onScroll={[Function]}
      >
        <div
          data-css-1g8berk=""
        >
          <div
            data-css-1y16c93=""
            data-css-83b6zj=""
          />
          <div
            data-css-1fr3949=""
          >
            <button
              disabled={true}
              onClick={[Function]}
            >
              collapse
            </button>
            <button
              onClick={[Function]}
            >
              expand
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      data-css-1ackutz=""
      data-css-ejkno9=""
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots components|Scrollable no scroll needed 1`] = `
<div
  data-css-j67xs2=""
>
  <div
    data-css-16jsjct=""
    data-css-axmbrd=""
    data-scrollable={true}
  >
    <div
      data-css-1srorb2=""
    >
      <div
        data-css-3e2h8g=""
        onScroll={[Function]}
      />
    </div>
    <div
      data-css-1ackutz=""
      data-css-ejkno9=""
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    />
  </div>
  <div
    data-css-1tfmk30=""
  />
</div>
`;

exports[`Storyshots components|Scrollable with container padding 1`] = `
<div
  data-css-j67xs2=""
>
  <div
    data-css-16jsjct=""
    data-css-1y16c93=""
    data-css-axmbrd=""
    data-scrollable={true}
  >
    <div
      data-css-1srorb2=""
    >
      <div
        data-css-3e2h8g=""
        onScroll={[Function]}
      >
        <div
          data-css-83b6zj=""
        />
      </div>
    </div>
    <div
      data-css-1ackutz=""
      data-css-ejkno9=""
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    />
  </div>
  <div
    data-css-1tfmk30=""
    data-css-1y16c93=""
  >
    <div
      data-css-83b6zj=""
    />
  </div>
</div>
`;

exports[`Storyshots components|Scrollable with content padding 1`] = `
<div
  data-css-j67xs2=""
>
  <div
    data-css-16jsjct=""
    data-css-axmbrd=""
    data-scrollable={true}
  >
    <div
      data-css-1srorb2=""
    >
      <div
        data-css-3e2h8g=""
        onScroll={[Function]}
      >
        <div
          data-css-1y16c93=""
          data-css-83b6zj=""
        />
      </div>
    </div>
    <div
      data-css-1ackutz=""
      data-css-ejkno9=""
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    />
  </div>
  <div
    data-css-1tfmk30=""
  >
    <div
      data-css-1y16c93=""
      data-css-83b6zj=""
    />
  </div>
</div>
`;

exports[`Storyshots components|Scrollable with custom tag 1`] = `
<div
  data-css-j67xs2=""
>
  <div
    data-css-16jsjct=""
    data-css-axmbrd=""
    data-scrollable={true}
  >
    <div
      data-css-1srorb2=""
    >
      <main
        data-css-3e2h8g=""
        onScroll={[Function]}
      >
        <div
          data-css-83b6zj=""
        />
      </main>
    </div>
    <div
      data-css-1ackutz=""
      data-css-ejkno9=""
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    />
  </div>
  <div
    data-css-16jsjct=""
    data-css-axmbrd=""
    data-scrollable={true}
  >
    <div
      data-css-1srorb2=""
    >
      <aside
        data-css-3e2h8g=""
        onScroll={[Function]}
      >
        <div
          data-css-83b6zj=""
        />
      </aside>
    </div>
    <div
      data-css-1ackutz=""
      data-css-ejkno9=""
      draggable={true}
      onDrag={[Function]}
      onDragEnd={[Function]}
      onDragStart={[Function]}
    />
  </div>
</div>
`;
